--- a/app/src/main/res/layout/page_button.xml
+++ b/app/src/main/res/layout/page_button.xml
@@ -16,7 +16,6 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="test"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
