--- a/app/src/main/res/drawable/checked_button_shape.xml
+++ b/app/src/main/res/drawable/checked_button_shape.xml
@@ -2,5 +2,7 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="25dp"/>
+    <corners android:radius="10dp"/>
+
+    <solid android:color="@color/gray"/>
 </shape>
