--- a/app/src/main/res/drawable/ic_calendar.xml
+++ b/app/src/main/res/drawable/ic_calendar.xml
@@ -8,69 +8,69 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m16,2v3"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m3.5,9.09h17"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m21,8.5v8.5c0,3 -1.5,5 -5,5h-8c-3.5,0 -5,-2 -5,-5v-8.5c0,-3 1.5,-5 5,-5h8c3.5,0 5,2 5,5z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m15.695,13.7h0.009"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m15.695,16.7h0.009"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m11.995,13.7h0.009"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m11.995,16.7h0.009"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m8.294,13.7h0.009"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="m8.294,16.7h0.009"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#292d32"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
 </vector>
