--- a/app/src/main/res/layout/page_button.xml
+++ b/app/src/main/res/layout/page_button.xml
@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
-    android:background="@drawable/side_nav_bar_shape"
-    android:padding="5dp"
-    android:layout_height="70dp">
+    android:paddingStart="30dp"
+    android:layout_margin="10dp"
+    android:layout_height="70dp"
+    tools:ignore="RtlSymmetry">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivIcon"
+        android:layout_weight="0"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="20dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <androidx.cardview.widget.CardView
+        android:visibility="gone"
+        android:id="@+id/cvMessageCard"
+        android:layout_width="35dp"
+        android:layout_height="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_gravity="center_vertical"
+        app:cardCornerRadius="15dp">
+        <TextView
+            android:id="@+id/tvMessageNumber"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAlignment="center"
+            android:text="10"
+            android:textColor="@color/white"/>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
