--- a/app/src/main/res/layout/side_menu.xml
+++ b/app/src/main/res/layout/side_menu.xml
@@ -56,8 +56,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pageRecycler"
+        android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+<!--    <com.google.android.material.navigation.NavigationView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:menu="@menu/side_bar_menu"/>-->
 
     <View
         android:layout_width="match_parent"
@@ -87,20 +93,24 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:gravity="center_vertical"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
         android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:contentDescription="TODO"
+            android:layout_weight="0"
             android:src="@mipmap/ic_launcher"
             tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
+            android:layout_weight="1"
             android:layout_marginStart="20dp"
             android:orientation="vertical"
+            android:gravity="center_vertical"
             android:layout_height="match_parent">
             <TextView
                 android:layout_width="match_parent"
@@ -120,9 +130,11 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:layout_weight="0"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ic_more"
             android:importantForAccessibility="no" />
     </androidx.appcompat.widget.LinearLayoutCompat>
